// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Loader /> renders default 1`] = `
<div
  className="loader_1pzb0ut-o_O-loader_absolute_1lfa8e4"
>
  <span
    className="dot_1n663f4-o_O-dot_1_q3fdyh"
    key="1"
  />
  <span
    className="dot_1n663f4-o_O-dot_2_1661oda"
    key="2"
  />
  <span
    className="dot_1n663f4"
    key="3"
  />
</div>
`;

exports[`<Loader /> renders inline 1`] = `
<div
  className="loader_1pzb0ut-o_O-loader_inline_36rlri"
>
  <span
    className="dot_1n663f4-o_O-dot_1_q3fdyh"
    key="1"
  />
  <span
    className="dot_1n663f4-o_O-dot_2_1661oda"
    key="2"
  />
  <span
    className="dot_1n663f4"
    key="3"
  />
</div>
`;

exports[`<Loader /> renders inverted 1`] = `
<div
  className="loader_1pzb0ut-o_O-loader_absolute_1lfa8e4"
>
  <span
    className="dot_1n663f4-o_O-dot_1_q3fdyh-o_O-dot_inverted_9isulr"
    key="1"
  />
  <span
    className="dot_1n663f4-o_O-dot_2_1661oda-o_O-dot_inverted_9isulr"
    key="2"
  />
  <span
    className="dot_1n663f4-o_O-dot_inverted_9isulr"
    key="3"
  />
</div>
`;

exports[`<Loader /> renders large 1`] = `
<div
  className="loader_1pzb0ut-o_O-loader_absolute_1lfa8e4"
>
  <span
    className="dot_1n663f4-o_O-dot_1_q3fdyh-o_O-dot_large_1jk0giu"
    key="1"
  />
  <span
    className="dot_1n663f4-o_O-dot_2_1661oda-o_O-dot_large_1jk0giu"
    key="2"
  />
  <span
    className="dot_1n663f4-o_O-dot_large_1jk0giu"
    key="3"
  />
</div>
`;

exports[`<Loader /> renders static 1`] = `
<div
  className="loader_1pzb0ut"
>
  <span
    className="dot_1n663f4-o_O-dot_1_q3fdyh"
    key="1"
  />
  <span
    className="dot_1n663f4-o_O-dot_2_1661oda"
    key="2"
  />
  <span
    className="dot_1n663f4"
    key="3"
  />
</div>
`;
